[gd_scene load_steps=36 format=3 uid="uid://c0bavsp5m5qge"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_qmkjd"]
[ext_resource type="Texture2D" uid="uid://dt4j3ychg873b" path="res://assets/file_run.png" id="2_7qneq"]
[ext_resource type="Texture2D" uid="uid://dwgutp6ehtqx0" path="res://assets/ParticleShard.png" id="2_enmir"]
[ext_resource type="AudioStream" uid="uid://dqewh7kih778h" path="res://assets/File death part 2.wav" id="3_dd0ee"]
[ext_resource type="AudioStream" uid="uid://ckn1wvc1tiuvb" path="res://assets/File death V1.wav.wav" id="4_3ixgn"]
[ext_resource type="Texture2D" uid="uid://bur7qpu0h6ixl" path="res://assets/ParticleHazard.png" id="4_150kn"]
[ext_resource type="AudioStream" uid="uid://cayshnd7c32ky" path="res://assets/Death sound effect.mp3" id="5_vsbux"]
[ext_resource type="Texture2D" uid="uid://b8ogqo2xdtu8r" path="res://assets/file_destroy.png" id="5_xakk5"]

[sub_resource type="Gradient" id="Gradient_ol4ab"]
offsets = PackedFloat32Array(0.792593, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_u2gqp"]
gradient = SubResource("Gradient_ol4ab")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_cdaia"]
particle_flag_disable_z = true
direction = Vector3(0, 0, 0)
gravity = Vector3(0, -80, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
angle_min = -720.0
angle_max = 720.0
scale_min = 0.2
scale_max = 0.4
color_ramp = SubResource("GradientTexture1D_u2gqp")

[sub_resource type="CircleShape2D" id="CircleShape2D_5qmfi"]
radius = 13.0

[sub_resource type="AtlasTexture" id="AtlasTexture_5m37t"]
atlas = ExtResource("5_xakk5")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pe80f"]
atlas = ExtResource("5_xakk5")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppucy"]
atlas = ExtResource("5_xakk5")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jaegm"]
atlas = ExtResource("5_xakk5")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_snvwb"]
atlas = ExtResource("5_xakk5")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3e1yl"]
atlas = ExtResource("5_xakk5")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8yr6t"]
atlas = ExtResource("5_xakk5")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g16sl"]
atlas = ExtResource("5_xakk5")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1wqc"]
atlas = ExtResource("5_xakk5")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lnvys"]
atlas = ExtResource("2_7qneq")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlofp"]
atlas = ExtResource("2_7qneq")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8kry"]
atlas = ExtResource("2_7qneq")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hg4kh"]
atlas = ExtResource("2_7qneq")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmqck"]
atlas = ExtResource("2_7qneq")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lcaxs"]
atlas = ExtResource("2_7qneq")
region = Rect2(320, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_27ul4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5m37t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pe80f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppucy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jaegm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_snvwb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3e1yl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8yr6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g16sl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1wqc")
}],
"loop": false,
"name": &"destroy",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lnvys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlofp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8kry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hg4kh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmqck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lcaxs")
}],
"loop": true,
"name": &"walk",
"speed": 12.0
}]

[sub_resource type="Gradient" id="Gradient_5cb7j"]
offsets = PackedFloat32Array(0.814815, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_q38xq"]
gradient = SubResource("Gradient_5cb7j")

[sub_resource type="Curve" id="Curve_1ir4h"]
_data = [Vector2(0, 0), 0.0, 3.74436, 0, 0, Vector2(0.144578, 1), 0.582456, 0.582456, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_61myw"]
curve = SubResource("Curve_1ir4h")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_qf8dk"]
lifetime_randomness = 0.5
emission_shape = 3
emission_box_extents = Vector3(32, 32, 1)
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
angle_min = -30.0
angle_max = 30.0
scale_min = 0.5
scale_curve = SubResource("CurveTexture_61myw")
color_ramp = SubResource("GradientTexture1D_q38xq")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2678v"]
size = Vector2(32, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_pq1wp"]
radius = 22.5222

[node name="File" type="CharacterBody2D"]
modulate = Color(1, 0.682353, 0, 1)
texture_filter = 1
collision_mask = 0
script = ExtResource("1_qmkjd")
nav_enabled = true
death_sounds = Array[AudioStream]([ExtResource("3_dd0ee"), ExtResource("4_3ixgn")])

[node name="WalkDust" type="GPUParticles2D" parent="."]
z_index = -1
position = Vector2(0, 9)
amount = 10
process_material = SubResource("ParticleProcessMaterial_cdaia")
texture = ExtResource("2_enmir")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5qmfi")
disabled = true

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
y_sort_enabled = true
sprite_frames = SubResource("SpriteFrames_27ul4")
animation = &"walk"
autoplay = "walk"

[node name="Destroy" type="GPUParticles2D" parent="Sprite2D"]
modulate = Color(1, 0, 0, 1)
emitting = false
amount = 6
process_material = SubResource("ParticleProcessMaterial_qf8dk")
texture = ExtResource("4_150kn")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_2678v")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0.5, 0)
shape = SubResource("CircleShape2D_pq1wp")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_vsbux")

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
